第二版加了图片

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     </style>
   </head>
   <body>
-    <h1>
+    <nav>
+      <ol>
+        <li><a href="#jianjie">游戏简介</a></li>
+        <li><a href="#faxing">发行情况</a></li>
+        <li><a href="#beijing">背景设定</a></li>
+        <li><a href="#juese">角色设定</a></li>
+        <li><a href="#wuqi">武器装备</a></li>
+      </ol>
+    </nav>
+    <h1 id="jianjie">
       怪物猎人世界
     </h1>
     <p>
@@ -27,7 +36,7 @@
       <img width="350px" src="image/4.jpg" alt="灭尽龙">
       <img width="350px" src="image/5.jpg" alt="冰呪龙">
     </p>
-    <h2>发行情况</h2>
+    <h2 id="faxing">发行情况</h2>
     <p>
       <ol>
         <li>2018年3月21日，《怪物猎人：世界》WeGame版送审上海新闻出版局。</li>
@@ -37,13 +46,13 @@
         <li>2019年9月，Steam公布了9月16日到9月22日的销售排行榜，《怪物猎人：世界》位居第一。</li>
       </ol>
     </p>
-    <h2>背景设定</h2>
+    <h2 id="beijing">背景设定</h2>
     <p>
       每十年一度，古龙们都会渡海迈向遥远彼方的新大陆。
       为了揭开这个被称为“古龙渡”的奇妙现象，公会组织“新大陆古龙调查团”，多次派调查团前往新大陆。
       今次已是第五次派遣，为了追踪渡海的古龙熔山龙，玩家所扮演的猎人来到了这片新大陆进行调查！
     </p>
-    <h2>角色设定</h2>
+    <h2 id="juese">角色设定</h2>
       <h3>玩家设定</h3>
       <p>
         <ul>
@@ -52,6 +61,7 @@
           <li>角色存在猎人等级，猎人等级是对猎人的经验及实力的体现。提升等级后，即可承接更困难的任务。猎人等级会随着完成任务而提升。</li>
           <li>在资料片《怪物猎人世界：冰原》中，追加了新的大师等级。大师等级跟猎人等级一样，随着等级提升可承接更困难的任务。</li>
         </ul>
+        <img width="350px" src="image/角色.jpg" alt="角色">
       </p>
       <h3>随从设定</h3>
       <p>
@@ -60,6 +70,7 @@
           <li>随从艾露猫的等级可提升，提升等级后可学会不同技能且体力及攻击力会提升。</li>
           <li>与猎人一起狩猎后，艾露猫会因此获得经验值并提升等级。在待机状态下，随从艾露猫会在任务或探索期间自主锻炼。虽然会比狩猎少，但锻炼也可取得经验值。</li>
         </ul>
+        <img width="350px" src="image/艾露猫.jpg" alt="艾露猫">
       </p>  
       <h3>登场怪物</h3>
       <p>
@@ -69,7 +80,7 @@
           <li>怪物的身体存在的“肉质”，可抵抗切断系统/打击系统/弹药系统等物理攻击系统。同样也存在“属性耐性”，可对抗火属性/水属性/雷属性/冰属性/龙属性等属性。每个怪物与部位都有所不同。例如，打击系统攻击很有效，弹药系统却几乎无效；火属性攻击很有效，却不怕水属性等等。</li>
         </ul>
       </p>
-    <h2>武器装备</h2>
+    <h2 id="wuqi">武器装备</h2>
       <h3>武器</h3>
       <p>
         <ul>
