第三版优化图片

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li>随从艾露猫的等级可提升，提升等级后可学会不同技能且体力及攻击力会提升。</li>
           <li>与猎人一起狩猎后，艾露猫会因此获得经验值并提升等级。在待机状态下，随从艾露猫会在任务或探索期间自主锻炼。虽然会比狩猎少，但锻炼也可取得经验值。</li>
         </ul>
-        <img width="350px" src="image/艾露猫.jpg" alt="艾露猫">
+        <img width="350px" src="image/艾露猫.png" alt="艾露猫">
       </p>  
       <h3>登场怪物</h3>
       <p>
@@ -113,20 +113,20 @@
             <tr><td>弓</td><td>可进行各种射击的中距离武器。可通过蓄力箭瞄准攻击怪物的弱点来发挥最大的力量。</td></tr>
         </tbody>
         </table>
-        <img width="300px" src="image/大剑.jpg" alt="大剑">
-        <img width="300px" src="image/太刀.jpg" alt="太刀">
-        <img width="300px" src="image/片手剑.jpg" alt="片手剑">
-        <img width="300px" src="image/双剑.jpg" alt="双剑">
-        <img width="300px" src="image/大锤.jpg" alt="大锤">
-        <img width="300px" src="image/狩猎笛.jpg" alt="狩猎笛">
-        <img width="300px" src="image/长枪.jpg" alt="长枪">
-        <img width="300px" src="image/铳枪.jpg" alt="铳枪">
-        <img width="300px" src="image/斩斧.jpg" alt="斩斧">
-        <img width="300px" src="image/盾斧.jpg" alt="盾斧"><br>
-        <img width="300px" src="image/操虫棍.jpg" alt="操虫棍">
-        <img width="300px" src="image/轻弩.jpg" alt="轻弩炮">
-        <img width="300px" src="image/重弩.jpg" alt="重弩炮">
-        <img width="300px" src="image/弓箭.jpg" alt="弓">
+        <img width="300px" src="image/大剑.png" alt="大剑">
+        <img width="300px" src="image/太刀.png" alt="太刀">
+        <img width="300px" src="image/片手剑.png" alt="片手剑">
+        <img width="300px" src="image/双剑.png" alt="双剑">
+        <img width="300px" src="image/大锤.png" alt="大锤">
+        <img width="300px" src="image/狩猎笛.png" alt="狩猎笛">
+        <img width="300px" src="image/长枪.png" alt="长枪">
+        <img width="300px" src="image/铳枪.png" alt="铳枪">
+        <img width="300px" src="image/斩斧.png" alt="斩斧">
+        <img width="300px" src="image/盾斧.png" alt="盾斧"><br>
+        <img width="300px" src="image/操虫棍.png" alt="操虫棍">
+        <img width="300px" src="image/轻弩.png" alt="轻弩炮">
+        <img width="300px" src="image/重弩.png" alt="重弩炮">
+        <img width="300px" src="image/弓箭.png" alt="弓">
       </p> 
       <h3>防具</h3>
       <p>
