第四版图片更新

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           <li>怪物存在耐力，且会因为战斗时的行动与猎人的攻击等因素减少。疲劳的怪物会开始流口水，攻击也会变弱。经过一段时间后，怪物会借由进食等方式回复耐力。</li>
           <li>怪物的身体存在的“肉质”，可抵抗切断系统/打击系统/弹药系统等物理攻击系统。同样也存在“属性耐性”，可对抗火属性/水属性/雷属性/冰属性/龙属性等属性。每个怪物与部位都有所不同。例如，打击系统攻击很有效，弹药系统却几乎无效；火属性攻击很有效，却不怕水属性等等。</li>
         </ul>
+        <img width="350px" src="image/雷狼龙.jpg" alt="雷狼龙">
       </p>
     <h2 id="wuqi">武器装备</h2>
       <h3>武器</h3>
