--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <p>
       《怪物猎人：世界》英文名Monster Hunter:World，是卡普空开发制作的第三人称角色扮演类动作游戏，于2018年1月16日在PS4、Xbox One平台发售，2018年8月10日登陆PC端Steam平台，为《怪物猎人》系列作品之一。
       在游戏中，玩家将化身成猎人，接受任务狩猎生活栖息在各种环境中的魔物。利用狩猎魔物取得的材料，制作更强的武器和防具，挑战更强大的魔物。<br> 
-      <img width="350px" src="image/1.jpg" alt="游戏logo">
-      <img width="350px" src="image/2.jpg" alt="雄火龙">
-      <img width="350px" src="image/3.jpg" alt="雄火龙2">
-      <img width="350px" src="image/4.jpg" alt="灭尽龙">
-      <img width="350px" src="image/5.jpg" alt="冰呪龙">
+      <a href="image/1.jpg" target="_blank"><img width="350px" src="image/1.jpg" alt="游戏logo"></a>
+      <a href="image/2.jpg" target="_blank"><img width="350px" src="image/2.jpg" alt="雄火龙"></a>
+      <a href="image/3.jpg" target="_blank"><img width="350px" src="image/3.jpg" alt="雄火龙2"></a>
+      <a href="image/4.jpg" target="_blank"><img width="350px" src="image/4.jpg" alt="灭尽龙"></a>
+      <a href="image/5.jpg" target="_blank"><img width="350px" src="image/5.jpg" alt="冰呪龙"></a>
     </p>
     <h2 id="faxing">发行情况</h2>
     <p>
@@ -61,7 +61,7 @@
           <li>角色存在猎人等级，猎人等级是对猎人的经验及实力的体现。提升等级后，即可承接更困难的任务。猎人等级会随着完成任务而提升。</li>
           <li>在资料片《怪物猎人世界：冰原》中，追加了新的大师等级。大师等级跟猎人等级一样，随着等级提升可承接更困难的任务。</li>
         </ul>
-        <img width="350px" src="image/角色.jpg" alt="角色">
+        <div><a href="image/角色.jpg" target="_blank"><img width="350px" src="image/角色.jpg" alt="角色"></a></div>
       </p>
       <h3>随从设定</h3>
       <p>
@@ -70,7 +70,7 @@
           <li>随从艾露猫的等级可提升，提升等级后可学会不同技能且体力及攻击力会提升。</li>
           <li>与猎人一起狩猎后，艾露猫会因此获得经验值并提升等级。在待机状态下，随从艾露猫会在任务或探索期间自主锻炼。虽然会比狩猎少，但锻炼也可取得经验值。</li>
         </ul>
-        <img width="350px" src="image/艾露猫.png" alt="艾露猫">
+        <div><a href="image/艾露猫.png" target="_blank"><img width="350px" src="image/艾露猫.png" alt="艾露猫"></a></div>
       </p>  
       <h3>登场怪物</h3>
       <p>
@@ -79,7 +79,7 @@
           <li>怪物存在耐力，且会因为战斗时的行动与猎人的攻击等因素减少。疲劳的怪物会开始流口水，攻击也会变弱。经过一段时间后，怪物会借由进食等方式回复耐力。</li>
           <li>怪物的身体存在的“肉质”，可抵抗切断系统/打击系统/弹药系统等物理攻击系统。同样也存在“属性耐性”，可对抗火属性/水属性/雷属性/冰属性/龙属性等属性。每个怪物与部位都有所不同。例如，打击系统攻击很有效，弹药系统却几乎无效；火属性攻击很有效，却不怕水属性等等。</li>
         </ul>
-        <img width="350px" src="image/雷狼龙.jpg" alt="雷狼龙">
+        <div><a href="image/雷狼龙.jpg" target="_blank"><img width="350px" src="image/雷狼龙.jpg" alt="雷狼龙"></a></div>
       </p>
     <h2 id="wuqi">武器装备</h2>
       <h3>武器</h3>
@@ -114,20 +114,20 @@
             <tr><td>弓</td><td>可进行各种射击的中距离武器。可通过蓄力箭瞄准攻击怪物的弱点来发挥最大的力量。</td></tr>
         </tbody>
         </table>
-        <img width="300px" src="image/大剑.png" alt="大剑">
-        <img width="300px" src="image/太刀.png" alt="太刀">
-        <img width="300px" src="image/片手剑.png" alt="片手剑">
-        <img width="300px" src="image/双剑.png" alt="双剑">
-        <img width="300px" src="image/大锤.png" alt="大锤">
-        <img width="300px" src="image/狩猎笛.png" alt="狩猎笛">
-        <img width="300px" src="image/长枪.png" alt="长枪">
-        <img width="300px" src="image/铳枪.png" alt="铳枪">
-        <img width="300px" src="image/斩斧.png" alt="斩斧">
-        <img width="300px" src="image/盾斧.png" alt="盾斧"><br>
-        <img width="300px" src="image/操虫棍.png" alt="操虫棍">
-        <img width="300px" src="image/轻弩.png" alt="轻弩炮">
-        <img width="300px" src="image/重弩.png" alt="重弩炮">
-        <img width="300px" src="image/弓箭.png" alt="弓">
+        <a href="image/大剑.png" target="_blank"><img width="300px" src="image/大剑.png" alt="大剑"></a>
+        <a href="image/太刀.png" target="_blank"><img width="300px" src="image/太刀.png" alt="太刀"></a>
+        <a href="image/片手剑.png" target="_blank"><img width="300px" src="image/片手剑.png" alt="片手剑"></a>
+        <a href="image/双剑.png" target="_blank"><img width="300px" src="image/双剑.png" alt="双剑"></a>
+        <a href="image/大锤.png" target="_blank"><img width="300px" src="image/大锤.png" alt="大锤"></a>
+        <a href="image/狩猎笛.png" target="_blank"><img width="300px" src="image/狩猎笛.png" alt="狩猎笛"></a>
+        <a href="image/长枪.png" target="_blank"><img width="300px" src="image/长枪.png" alt="长枪"></a>
+        <a href="image/铳枪.png" target="_blank"><img width="300px" src="image/铳枪.png" alt="铳枪"></a>
+        <a href="image/斩斧.png" target="_blank"><img width="300px" src="image/斩斧.png" alt="斩斧"></a>
+        <a href="image/盾斧.png" target="_blank"><img width="300px" src="image/盾斧.png" alt="盾斧"></a><br>
+        <a href="image/操虫棍.png" target="_blank"><img width="300px" src="image/操虫棍.png" alt="操虫棍"></a>
+        <a href="image/轻弩.png" target="_blank"><img width="300px" src="image/轻弩.png" alt="轻弩炮"></a>
+        <a href="image/重弩.png" target="_blank"><img width="300px" src="image/重弩.png" alt="重弩炮"></a>
+        <a href="image/弓箭.png" target="_blank"><img width="300px" src="image/弓箭.png" alt="弓"></a>
       </p> 
       <h3>防具</h3>
       <p>
@@ -137,7 +137,6 @@
           <li>部分防具拥有“技能”这种特殊效果。例如抑制耐力槽的消耗，或是提升攻击力等。技能有分等级，等级越高效果越强。若全部防具都拥有相同技能，技能等级会被合计。</li>
           <li>全部防具集满规定数量的相同技能后才会发动效果的技能叫做“系列技能”。若发动条件是集满3个系列技能的话，效果就不会在集满2个时发动。但是，在集满时发动的效果会变成特别的效果。</li>
         </ul>
-
       </p>
   </body>
 </html>
