--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <a href="image/长枪.png" target="_blank"><img width="300px" src="image/长枪.png" alt="长枪"></a>
         <a href="image/铳枪.png" target="_blank"><img width="300px" src="image/铳枪.png" alt="铳枪"></a>
         <a href="image/斩斧.png" target="_blank"><img width="300px" src="image/斩斧.png" alt="斩斧"></a>
-        <a href="image/盾斧.png" target="_blank"><img width="300px" src="image/盾斧.png" alt="盾斧"></a><br>
+        <a href="image/盾斧.png" target="_blank"><img width="300px" src="image/盾斧.png" alt="盾斧"></a>
         <a href="image/操虫棍.png" target="_blank"><img width="300px" src="image/操虫棍.png" alt="操虫棍"></a>
         <a href="image/轻弩.png" target="_blank"><img width="300px" src="image/轻弩.png" alt="轻弩炮"></a>
         <a href="image/重弩.png" target="_blank"><img width="300px" src="image/重弩.png" alt="重弩炮"></a>
